adapt to express-generator

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ingressdamagemap_server",
   "version": "0.0.1",
   "description": "ingress damage map server version",
-  "main": "ingressdamagemap_server.js",
-  "engines": {
-    "node": "6.5.x"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
+  },
+  "engines": {
+    "node": "6.5.x",
+    "npm": "3.10.x"
   },
   "repository": {
     "type": "git",
@@ -15,11 +15,13 @@
   },
   "author": "bhind",
   "license": "GPL-2.0",
-  "bugs": {
-    "url": "https://github.com/bhind/ingressmap/issues"
-  },
-  "homepage": "https://github.com/bhind/ingressmap#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
   }
 }
