--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.13.4",
     "morgan": "~1.7.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "stylus": "^0.54.5"
   }
 }
