--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nib": "^1.1.2",
     "pug": "^2.0.0-beta6",
     "serve-favicon": "~2.3.0",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "typescript": "^2.0.3"
   }
 }
