--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
   "author": "bhind",
   "license": "GPL-2.0",
   "dependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
+    "@types/express": "^4.0.33",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^6.0.41",
+    "@types/serve-favicon": "^2.2.28",
+    "@types/stylus": "^0.48.27",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
