--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": false,
-        "sourceMap": false,
-        "types": [
-            "express",
-            "stylus",
-            "serve-favicon",
-            "morgan",
-            "cookie-parser",
-            "body-parser"
-        ]
+        "": false,
+        "sourceMap": false
     }
 }
