--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "": false,
+        "noImplicitAny": false,
         "sourceMap": false
     }
 }
