--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "ingressdamagemap_server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "ingress damage map server version",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
   "engines": {
     "node": "6.5.x",
@@ -14,24 +19,29 @@
     "url": "git+https://github.com/bhind/ingressmap.git"
   },
   "author": "bhind",
-  "license": "GPL-2.0",
+  "license": "ISC",
   "dependencies": {
-    "@types/body-parser": "0.0.33",
-    "@types/cookie-parser": "^1.3.30",
-    "@types/express": "^4.0.33",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^6.0.41",
-    "@types/serve-favicon": "^2.2.28",
-    "@types/stylus": "^0.48.27",
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "morgan": "~1.7.0",
-    "nib": "^1.1.2",
-    "pug": "^2.0.0-beta6",
-    "serve-favicon": "~2.3.0",
-    "stylus": "^0.54.5",
-    "typescript": "^2.0.3"
+    "@angular/common": "~2.0.1",
+    "@angular/compiler": "~2.0.1",
+    "@angular/core": "~2.0.1",
+    "@angular/forms": "~2.0.1",
+    "@angular/http": "~2.0.1",
+    "@angular/platform-browser": "~2.0.1",
+    "@angular/platform-browser-dynamic": "~2.0.1",
+    "@angular/router": "~3.0.1",
+    "@angular/upgrade": "~2.0.1",
+    "angular-in-memory-web-api": "~0.1.1",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25"
+  },
+  "devDependencies": {
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings":"^1.4.0"
   }
 }
